--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.2.1"
 
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.5.2"
 
